; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/zte/extr_zx_hdmi.c_zx_hdmi_unbind.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/zte/extr_zx_hdmi.c_zx_hdmi_unbind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.zx_hdmi = type { i64, %struct.TYPE_7__, %struct.TYPE_8__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 (%struct.TYPE_7__*)* }
%struct.TYPE_8__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 (%struct.TYPE_8__*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, %struct.device*, i8*)* @zx_hdmi_unbind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zx_hdmi_unbind(%struct.device* %0, %struct.device* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.zx_hdmi*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device* %1, %struct.device** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.zx_hdmi* @dev_get_drvdata(%struct.device* %8)
  store %struct.zx_hdmi* %9, %struct.zx_hdmi** %7, align 8
  %10 = load %struct.zx_hdmi*, %struct.zx_hdmi** %7, align 8
  %11 = getelementptr inbounds %struct.zx_hdmi, %struct.zx_hdmi* %10, i32 0, i32 2
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i32 (%struct.TYPE_8__*)*, i32 (%struct.TYPE_8__*)** %14, align 8
  %16 = load %struct.zx_hdmi*, %struct.zx_hdmi** %7, align 8
  %17 = getelementptr inbounds %struct.zx_hdmi, %struct.zx_hdmi* %16, i32 0, i32 2
  %18 = call i32 %15(%struct.TYPE_8__* %17)
  %19 = load %struct.zx_hdmi*, %struct.zx_hdmi** %7, align 8
  %20 = getelementptr inbounds %struct.zx_hdmi, %struct.zx_hdmi* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 0
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i32 (%struct.TYPE_7__*)*, i32 (%struct.TYPE_7__*)** %23, align 8
  %25 = load %struct.zx_hdmi*, %struct.zx_hdmi** %7, align 8
  %26 = getelementptr inbounds %struct.zx_hdmi, %struct.zx_hdmi* %25, i32 0, i32 1
  %27 = call i32 %24(%struct.TYPE_7__* %26)
  %28 = load %struct.zx_hdmi*, %struct.zx_hdmi** %7, align 8
  %29 = getelementptr inbounds %struct.zx_hdmi, %struct.zx_hdmi* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %37

32:                                               ; preds = %3
  %33 = load %struct.zx_hdmi*, %struct.zx_hdmi** %7, align 8
  %34 = getelementptr inbounds %struct.zx_hdmi, %struct.zx_hdmi* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = call i32 @platform_device_unregister(i64 %35)
  br label %37

37:                                               ; preds = %32, %3
  ret void
}

declare dso_local %struct.zx_hdmi* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @platform_device_unregister(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
